--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="collapse ml-1" id="szorzotabla">
             <div class="card card-body">
                 <h4 class="mb-4">Szorzótábla</h4>
-                <img src="pic/szorzotabla.jpg" alt="Szorzótábla">
+                <img src="szorzotabla.jpg" alt="Szorzótábla">
             </div>
         </div>
     </div>
