--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="collapse ml-1" id="szorzotabla">
             <div class="card card-body">
                 <h4 class="mb-4">Szorzótábla</h4>
-                <img src="szorzotabla-vue.jpg" alt="Szorzótábla">
+                <img src="szorzotabla-vue.png" alt="Szorzótábla">
             </div>
         </div>
     </div>
